Refactor: Implement ParallelTask abstraction and modernize SpeciesRegistry
- Introduced ParallelTask interface and asParallelTask() to eliminate instanceof checks in PhaseScheduler.
- Removed N generic parameter from CellService to resolve type erasure clashes.
- Modernized SpeciesRegistry with Map.copyOf and cached species codes.
- Documented ParallelDispatcher thread-safety limitations.
- Updated all domain services and tests to support the new API.